workloads/speedpoly-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedpoly-web
  namespace: speedpoly
spec:
  selector:
    app.kubernetes.io/name: speedpoly-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
